<resources>
    <string name="app_name">Android Examples</string>
    <string name="please_select_activity">Bitte wählen Sie eine Activity</string>
    <string name="calculate">Berechne</string>
    <string-array name="operators">
        <item>+</item>
        <item>-</item>
        <item>*</item>
        <item>/</item>
    </string-array>
    <string name="select_sensor_demo">Select the sensor demo</string>
    <string name="title_activity_simple_maps">SimpleMapsActivity</string>
    <string name="async_task_fetch">Fetch</string>
    <string name="select_concurrent_demo">Select the concurrent demo</string>
    <string name="ttt_illegal_move">Unerlaubter Zug</string>
    <string name="ttt_won">Gewonnen</string>
    <string name="ttt_draw">Unentschieden</string>
    <string name="title_activity_thing_worx">ThingWorxActivity</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="from_server">Vom Server holen…</string>
    <string name="to_server">Auf dem Server speichern…</string>
    <string name="key">Schlüssel</string>
    <string name="value">Wert</string>
    <string name="send">Senden</string>
    <string name="get">Holen</string>
    <string name="service_call">Serviceaufruf</string>
    <string name="title_activity_mqttactivity">MQTTActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="simplecalc_enter_1">Zahl 1 eingeben</string>
    <string name="simplecalc_enter_2">Zahl 2 eingeben</string>
</resources>